--- a/rockwell-automation-simulator/package.json
+++ b/rockwell-automation-simulator/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "cookie": "^0.6.0",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
     "next": "^14.2.3",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
