--- a/rockwell-automation-simulator/package.json
+++ b/rockwell-automation-simulator/package.json
@@ -14,12 +14,15 @@
     "chart.js": "^4.4.3",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.5",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "next": "^14.2.3",
     "pg": "^8.11.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-globe.gl": "^2.27.2",
+    "use-resize-observer": "^9.1.0"
   }
 }
