--- a/rockwell-automation-simulator/package.json
+++ b/rockwell-automation-simulator/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-globe.gl": "^2.27.2",
+    "react-responsive-carousel": "^3.2.23",
     "use-resize-observer": "^9.1.0"
   }
 }
