--- a/rockwell-automation-simulator/package.json
+++ b/rockwell-automation-simulator/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18",
     "react-globe.gl": "^2.27.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "use-resize-observer": "^9.1.0"
   }
 }
